Fix: problem: ConcurrentModificationException;